--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -1,3 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">#F8D19B</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_chess_svgrepo_com</item>
+        <item name="postSplashScreenTheme">@style/Theme.ILoveBoardGames</item>
+    </style>
 </resources>
